--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
         }
         
         :root {
-            --primary-color: #F37C3B; /* نارنجی اصلی */
+            --primary-color: #0288D1; /* آبی اصلی - هماهنگ با تم آموزشی */
             --secondary-color: #F5F7FA; /* خاکستری روشن برای پس‌زمینه light */
-            --accent-color: #F37C3B; /* همان نارنجی برای برجسته‌سازی */
+            --accent-color: #26A69A; /* سبز برای برجسته‌سازی - هماهنگ با آبی */
             --text-primary: #212121; /* متن اصلی light */
             --text-secondary: #546E7A; /* متن ثانویه light */
             --text-primary-dark: #FFFFFF; /* متن اصلی dark */
             --text-secondary-dark: #CFD8DC; /* متن ثانویه dark */
-            --glass-bg-light: rgba(243, 124, 59, 0.15); /* شیشه‌ای نارنجی روشن */
+            --glass-bg-light: rgba(2, 136, 209, 0.15); /* شیشه‌ای آبی روشن */
             --glass-bg-dark: rgba(255, 255, 255, 0.2); /* شیشه‌ای سفید dark */
             --glass-border-light: rgba(255, 255, 255, 0.3); /* حاشیه شیشه‌ای light */
             --glass-border-dark: rgba(255, 255, 255, 0.2); /* حاشیه شیشه‌ای dark */
             --shadow-light: rgba(0,0,0,0.1); /* سایه light */
             --shadow-dark: rgba(0,0,0,0.3); /* سایه dark */
             --blur-amount: 8px;
-            --footer-bg: #F37C3B; /* فوتر نارنجی */
+            --footer-bg: #0277BD; /* فوتر آبی تیره */
             
             /* Legacy support for existing styles */
             --primary-blue: var(--primary-color);
             --secondary-gray: var(--secondary-color);
             --accent-green: var(--accent-color);
             --light-bg: var(--secondary-color);
-            --dark-bg: #37474F; /* پس‌زمینه dark - خاکستری تیره هماهنگ با نارنجی */
+            --dark-bg: #37474F; /* پس‌زمینه dark - خاکستری تیره هماهنگ با آبی */
             --text-dark: var(--text-primary);
             --text-light: var(--text-primary-dark);
             --text-secondary-light: var(--text-secondary);
@@ -152,7 +152,7 @@
             left: 0;
             width: 100%;
             height: 120%;
-            background: linear-gradient(45deg, rgba(243, 124, 59, 0.1), rgba(243, 124, 59, 0.1));
+            background: linear-gradient(45deg, rgba(0, 121, 107, 0.1), rgba(0, 31, 63, 0.1));
             transform: translateZ(-1px) scale(1.1);
             z-index: -1;
         }
@@ -180,7 +180,7 @@
         .logo-3d img {
             transition: all 0.4s ease;
             transform: translateZ(0);
-            filter: brightness(0) invert(1); /* لوگو را سفید می‌کند - فوق‌العاده برای تم نارنجی */
+            filter: brightness(0) invert(1); /* لوگو را سفید می‌کند - فوق‌العاده برای تم آبی */
         }
 
         .logo-3d:hover img {
@@ -189,7 +189,7 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, var(--accent-color), var(--primary-color));
+            background: linear-gradient(135deg, var(--accent-color), #00695C);
             color: white;
             padding: 14px 28px;
             border-radius: 10px;
@@ -202,7 +202,7 @@
             justify-content: center;
             font-weight: 600;
             font-size: 14px;
-            box-shadow: 0 2px 8px rgba(243, 124, 59, 0.15);
+            box-shadow: 0 2px 8px rgba(38, 166, 154, 0.15);
             position: relative;
             overflow: hidden;
         }
@@ -226,7 +226,7 @@
             background: var(--secondary-color);
             color: var(--text-primary);
             transform: translateY(-2px) scale(1.02);
-            box-shadow: 0 4px 15px rgba(243, 124, 59, 0.25);
+            box-shadow: 0 4px 15px rgba(38, 166, 154, 0.25);
         }
 
         .btn-primary:active {
@@ -234,7 +234,7 @@
         }
 
         .btn-secondary {
-            background: linear-gradient(135deg, var(--primary-color), var(--accent-color));
+            background: linear-gradient(135deg, var(--primary-color), #01579B);
             color: white;
             padding: 14px 28px;
             border-radius: 10px;
@@ -243,7 +243,7 @@
             cursor: pointer;
             font-weight: 600;
             font-size: 14px;
-            box-shadow: 0 2px 8px rgba(243, 124, 59, 0.15);
+            box-shadow: 0 2px 8px rgba(2, 136, 209, 0.15);
             position: relative;
             overflow: hidden;
         }
@@ -267,7 +267,7 @@
             background: var(--secondary-color);
             color: var(--text-primary);
             transform: translateY(-2px) scale(1.02);
-            box-shadow: 0 4px 15px rgba(243, 124, 59, 0.25);
+            box-shadow: 0 4px 15px rgba(2, 136, 209, 0.25);
         }
 
         .btn-secondary:active {
@@ -357,7 +357,7 @@
         .school-card {
             background: var(--glass-bg-light);
             backdrop-filter: blur(20px);
-            border: 1px solid rgba(243,124,59,0.1);
+            border: 1px solid rgba(2,136,209,0.1);
             border-radius: 16px;
             padding: 1.5rem;
             transition: all 0.3s ease;
@@ -370,7 +370,7 @@
 
         .school-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 15px 30px rgba(243,124,59,0.1);
+            box-shadow: 0 15px 30px rgba(0,31,63,0.1);
         }
 
         .team-section {
@@ -412,7 +412,7 @@
             left: -50%;
             width: 200%;
             height: 200%;
-            background: radial-gradient(circle, rgba(243, 124, 59, 0.1) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(0, 121, 107, 0.1) 0%, transparent 70%);
             opacity: 0;
             transition: opacity 0.4s ease;
             pointer-events: none;
@@ -449,7 +449,7 @@
 
         .tilt-card:hover {
             transform: translateY(-10px) rotateX(5deg) rotateY(5deg) scale(1.02);
-            box-shadow: 0 25px 50px rgba(243, 124, 59, 0.3);
+            box-shadow: 0 25px 50px rgba(0, 31, 63, 0.3);
         }
 
         .dark-mode .tilt-card:hover {
@@ -480,7 +480,7 @@
             background: rgba(255, 255, 255, 0.15);
             transform: translateX(-8px);
             border-color: var(--accent-green);
-            box-shadow: 0 8px 25px rgba(243, 124, 59, 0.2);
+            box-shadow: 0 8px 25px rgba(0, 121, 107, 0.2);
         }
 
         .dark-mode .ai-tool-link:hover {
@@ -531,8 +531,8 @@
 
         .ai-section-bg {
             background: linear-gradient(135deg, 
-                rgba(243, 124, 59, 0.05) 0%, 
-                rgba(243, 124, 59, 0.05) 50%, 
+                rgba(2, 136, 209, 0.05) 0%, 
+                rgba(38, 166, 154, 0.05) 50%, 
                 rgba(245, 247, 250, 0.05) 100%);
             border-radius: 24px;
             padding: 3rem 2rem;
@@ -541,8 +541,8 @@
 
         .dark-mode .ai-section-bg {
             background: linear-gradient(135deg, 
-                rgba(243, 124, 59, 0.1) 0%, 
-                rgba(243, 124, 59, 0.1) 50%, 
+                rgba(2, 136, 209, 0.1) 0%, 
+                rgba(38, 166, 154, 0.1) 50%, 
                 rgba(69, 90, 100, 0.1) 100%);
         }
 
@@ -562,7 +562,7 @@
             color: white;
             border: none;
             cursor: pointer;
-            box-shadow: 0 8px 32px rgba(243, 124, 59, 0.3);
+            box-shadow: 0 8px 32px rgba(0, 34, 68, 0.3);
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             display: flex;
             align-items: center;
@@ -640,7 +640,7 @@
 
         .chatbot-toggle:hover {
             transform: scale(1.05);
-            box-shadow: 0 12px 40px rgba(243, 124, 59, 0.5);
+            box-shadow: 0 12px 40px rgba(0, 34, 68, 0.5);
             background: linear-gradient(135deg, var(--primary-blue), var(--accent-green));
         }
 
@@ -1019,7 +1019,7 @@
             padding: 16px 20px;
             border-radius: 20px;
             max-width: 280px;
-            box-shadow: 0 8px 32px rgba(243, 124, 59, 0.3);
+            box-shadow: 0 8px 32px rgba(2, 136, 209, 0.3);
             transform: translateY(20px);
             opacity: 0;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
@@ -1075,7 +1075,7 @@
             font-size: 14px;
             font-weight: 600;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 8px 25px rgba(243, 124, 59, 0.2);
+            box-shadow: 0 8px 25px rgba(2, 136, 209, 0.2);
             display: inline-flex;
             align-items: center;
             gap: 10px;
@@ -1083,7 +1083,7 @@
 
         .ai-button:hover {
             transform: translateY(-5px) scale(1.05);
-            box-shadow: 0 15px 40px rgba(243, 124, 59, 0.3);
+            box-shadow: 0 15px 40px rgba(2, 136, 209, 0.3);
         }
 
         /* Adjusted styles for reports */
@@ -1675,7 +1675,7 @@
         header {
             background: var(--primary-color);
             border-radius: 20px;
-            box-shadow: 0 8px 32px rgba(243, 124, 59, 0.3);
+            box-shadow: 0 8px 32px rgba(0, 31, 63, 0.3);
         }
 
         .logo-text h1 {
@@ -1697,14 +1697,14 @@
 
         nav a:hover {
             color: var(--accent-color) !important;
-            text-shadow: 0 2px 8px rgba(243, 124, 59, 0.5);
+            text-shadow: 0 2px 8px rgba(38, 166, 154, 0.5);
         }
 
         .mobile-menu {
             transform: translateX(100%);
             transition: transform 0.3s ease;
             background: var(--primary-color);
-            box-shadow: -8px 0 32px rgba(243, 124, 59, 0.3);
+            box-shadow: -8px 0 32px rgba(0, 31, 63, 0.3);
         }
 
         .mobile-menu.active {
@@ -1714,7 +1714,7 @@
         /* Footer Styles */
         footer {
             background: var(--footer-bg);
-            box-shadow: 0 4px 12px rgba(243, 124, 59, 0.15);
+            box-shadow: 0 4px 12px rgba(0, 26, 51, 0.15);
         }
 
         /* Responsive Header */
