--- a/index.html
+++ b/index.html
@@ -2445,14 +2445,14 @@
     <!-- Schools and Team Section - Combined with Bank of Questions -->
     <section id="schools" class="py-4 px-4" style="background-color: #808080;">
         <div class="container mx-auto">
-            <h2>هنرستان‌های شهرستان</h2> <!-- عنوان جدید -->
+            <h2></h2> <!-- عنوان جدید -->
             
             <!-- Squares Grid - Now 5 items, removed deleted sections -->
             <div class="squares-grid mb-8">
                 <!-- Schools Square -->
                 <div class="glass-card p-6 text-center cursor-pointer hover:bg-blue-50 dark:hover:bg-gray-800 transition square-btn" onclick="window.location.href='schools.html'">
                     <img src="schools-icon-uploaded.jpg" alt="آیکون هنرستان‌ها" class="w-32 h-32 mb-2" /> <!-- آیکون بزرگ‌تر، جایگذاری آپلود کاربر -->
-                    <h3 class="font-bold mb-1">هنرستان‌ها</h3>
+                    <h3 class="font-bold mb-1">هنرستان‌های شهرستان</h3>
                 </div>
 
                 <!-- Ethics Square -->
