--- a/index.html
+++ b/index.html
@@ -2451,7 +2451,7 @@
             <div class="squares-grid mb-8">
                 <!-- Schools Square -->
                 <div class="glass-card p-6 text-center cursor-pointer hover:bg-blue-50 dark:hover:bg-gray-800 transition square-btn" onclick="window.location.href='schools.html'">
-                    <img src="schools-icon-uploaded.jpg" alt="آیکون هنرستان‌ها" class="w-32 h-32 mb-2" /> <!-- آیکون بزرگ‌تر، جایگذاری آپلود کاربر -->
+                    <img src="schools-icon.png" alt="آیکون هنرستان‌ها" class="w-32 h-32 mb-2" /> <!-- آیکون بزرگ‌تر، جایگذاری آپلود کاربر -->
                     <h3 class="font-bold mb-1">هنرستان‌های شهرستان</h3>
                 </div>
 
