--- a/index.html
+++ b/index.html
@@ -2457,25 +2457,25 @@
 
                 <!-- Ethics Square -->
                 <div class="glass-card p-6 text-center cursor-pointer hover:bg-blue-50 dark:hover:bg-gray-800 transition square-btn" onclick="window.location.href='ethics.html'">
-                    <img src="ethics-icon-uploaded.jpg" alt="آیکون فیلم‌های اخلاق حرفه‌ای" class="w-32 h-32 mb-2" /> <!-- آیکون بزرگ‌تر، جایگذاری آپلود کاربر -->
+                    <img src="ethics-icon.png" alt="آیکون فیلم‌های اخلاق حرفه‌ای" class="w-32 h-32 mb-2" /> <!-- آیکون بزرگ‌تر، جایگذاری آپلود کاربر -->
                     <h3 class="font-bold mb-1">فیلم‌های آموزش اخلاق حرفه‌ای</h3>
                 </div>
 
                 <!-- Annual Report Square - Replaced reports -->
                 <div class="glass-card p-6 text-center cursor-pointer hover:bg-blue-50 dark:hover:bg-gray-800 transition square-btn" onclick="window.location.href='annual-report.html'">
-                    <img src="report-icon-uploaded.jpg" alt="آیکون گزارش عملکرد سالانه" class="w-32 h-32 mb-2" /> <!-- آیکون بزرگ‌تر، جایگذاری آپلود کاربر -->
+                    <img src="report-icon.png" alt="آیکون گزارش عملکرد سالانه" class="w-32 h-32 mb-2" /> <!-- آیکون بزرگ‌تر، جایگذاری آپلود کاربر -->
                     <h3 class="font-bold mb-1">گزارش عملکرد سالانه شهرستان</h3>
                 </div>
 
                 <!-- Useful Links Square -->
                 <div class="glass-card p-6 text-center cursor-pointer hover:bg-blue-50 dark:hover:bg-gray-800 transition square-btn" onclick="window.location.href='useful.html'">
-                    <img src="tools-icon-uploaded.jpg" alt="آیکون لینک ابزارهای مفید و بانک سوالات" class="w-32 h-32 mb-2" /> <!-- آیکون بزرگ‌تر، جایگذاری آپلود کاربر -->
+                    <img src="tools-icon.png" alt="آیکون لینک ابزارهای مفید و بانک سوالات" class="w-32 h-32 mb-2" /> <!-- آیکون بزرگ‌تر، جایگذاری آپلود کاربر -->
                     <h3 class="font-bold mb-1">لینک ابزارهای مفید و بانک سوالات</h3>
                 </div>
 
                 <!-- Bank of Questions Square -->
                 <div class="glass-card p-6 text-center cursor-pointer hover:bg-blue-50 dark:hover:bg-gray-800 transition square-btn" onclick="window.location.href='bank.html'">
-                    <img src="bank-icon-uploaded.jpg" alt="آیکون بانک سوالات" class="w-32 h-32 mb-2" /> <!-- آیکون جدید برای آپلود کاربر -->
+                    <img src="bank-icon.png" alt="آیکون بانک سوالات" class="w-32 h-32 mb-2" /> <!-- آیکون جدید برای آپلود کاربر -->
                     <h3 class="font-bold mb-1">بانک سوالات</h3>
                 </div>
             </div>
