--- a/install.html
+++ b/install.html
@@ -1721,7 +1721,7 @@
     <section id="hero" class="hero-gradient text-white py-24 mx-4 rounded-3xl mb-4 relative">
         <div class="parallax-bg"></div>
         <div class="container mx-auto px-6 text-center relative z-10">
-            <h2 class="text-3xl md:text-5xl font-bold mb-6 animate-fade-in" style="color: white !important;">آموزش نصب نرم‌افزارها و جایگزین‌های رایگان</h2>
+            <h2 class="text-3xl md:text-5xl font-bold mb-6 animate-fade-in" style="color: white !important;">آموزش نصب نرم‌افزارها </h2>
             <h3 class="text-2xl md:text-3xl mb-4 animate-fade-in-delay-1">ویدیوهای آموزشی از آپارات</h3>
             <p class="text-lg md:text-xl mb-8 max-w-4xl mx-auto leading-relaxed opacity-90 animate-fade-in-delay-4">
                 در این بخش، ویدیوهای آموزشی نصب نرم‌افزارهای محبوب و جایگزین‌های رایگان دائمی ارائه شده است.
