--- a/schools.html
+++ b/schools.html
@@ -1866,7 +1866,7 @@
                         </div>
                         <div class="space-y-2 max-h-64 overflow-y-auto">
                             <div class="bg-white bg-opacity-50 p-2 rounded-lg text-sm border-r-4" 
-                                 style="border-color: var(--accent-green);">شهره پورغلام</div>
+                                 style="border-color: var(--accent-green);">سعیده صابری </div>
                             <div class="bg-white bg-opacity-50 p-2 rounded-lg text-sm border-r-4" 
                                  style="border-color: var(--accent-green);">عبدالمحسن راستی</div>
                             <div class="bg-white bg-opacity-50 p-2 rounded-lg text-sm border-r-4" 
@@ -1876,6 +1876,10 @@
                             <div class="bg-white bg-opacity-50 p-2 rounded-lg text-sm border-r-4" 
                                  style="border-color: var(--accent-green);">فاطمه رحمانی</div>
                             <div class="bg-white bg-opacity-50 p-2 rounded-lg text-sm border-r-4" 
+                                 style="border-color: var(--accent-green);">فائزه بهزادی</div>
+                                 <div class="bg-white bg-opacity-50 p-2 rounded-lg text-sm border-r-4" 
+                                  style="border-color: var(--accent-green);">فائزه سلیمانی</div>
+                            <div class="bg-white bg-opacity-50 p-2 rounded-lg text-sm border-r-4"   
                                  style="border-color: var(--accent-green);">زینت راستگو</div>
                             <div class="bg-white bg-opacity-50 p-2 rounded-lg text-sm border-r-4" 
                                  style="border-color: var(--accent-green);">فرج نظری</div>
