--- a/index.html
+++ b/index.html
@@ -2466,7 +2466,7 @@
                 <!-- Useful Links Square -->
                 <div class="glass-card p-6 text-center cursor-pointer hover:bg-blue-50 dark:hover:bg-gray-800 transition square-btn" onclick="window.location.href='useful.html'">
                     <img src="tools-icon.png" alt="آیکون لینک ابزارهای مفید و بانک سوالات" class="w-32 h-32 mb-2" /> <!-- آیکون بزرگ‌تر، جایگذاری آپلود کاربر -->
-                    <h3 class="font-bold mb-1">لینک ابزارهای مفید </h3>
+                    <h3 class="font-bold mb-1">لینک سایت های مفید  </h3>
                 </div>
 
                 <!-- Bank of Questions Square -->
