--- a/index.html
+++ b/index.html
@@ -2116,7 +2116,7 @@
                     <!-- استاندارد رشته -->
                     <div>
                         <h4 class="font-bold mb-4 text-lg">استاندارد رشته</h4>
-                        <a href="https://payait.com/Standards/104-560.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFKR3V2eGxpOFM3cC00dk12TE9GOW1oWEZXMDI4U0VtUSIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiJ3ZWJfc3RhbmRhcmRBbW96ZXNoaS5wZGYifQ==" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             استاندارد رشته
                         </a>
@@ -2125,15 +2125,15 @@
                     <!-- دروس پایه ۱۰ -->
                     <div>
                         <h4 class="font-bold mb-4 text-lg">دروس پایه ۱۰</h4>
-                        <a href="http://chap.sch.ir/sites/default/files/lbooks/1403-1404/847/C310215.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFJdThXckNaLTVhRlhzVFJpWTd6dlo0LU1YRl81M2RidCIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiIxMC1lQ2l0aXplbi5wZGYifQ==" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             استفاده از مهارت شهروند الکترونیک
                         </a>
-                        <a href="http://chap.sch.ir/sites/default/files/lbooks/1403-1404/847/C310183.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFQQkdmZXRYc2gzbkZKZ1hldWYybkdBZHNzb054MWhuUSIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiIxMC1Db21Vc2VyLnBkZiJ9" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             کاربر رایانه
                         </a>
-                        <a href="http://chap.sch.ir/sites/default/files/lbooks/97-98/741/001-320-C310184%20%26%20C311184.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFpaXJrSzM3N1NYT2V5QkEtanhwNGpZV3dsOVk1UHdPVSIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiIxMC1PZmZpY2VBdXRvVXNlci5wZGYifQ==" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             کاربر اتوماسیون اداری
                         </a>
@@ -2142,7 +2142,7 @@
                     <!-- دروس پایه ۱۱ -->
                     <div>
                         <h4 class="font-bold mb-4 text-lg">دروس پایه ۱۱</h4>
-                        <a href="http://chap.sch.ir/books/13352" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFrTGhJWWxsT2t5TFBqeDNCOVFuaU9WSlRLU3lzLU1XQiIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiJ3ZWJfMTFfV2ViRGVzaWduLnBkZiJ9" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             تولید کننده و توسعه دهنده پایگاه های اینترنتی 
                         </a>
@@ -2151,11 +2151,11 @@
                     <!-- دروس پایه ۱۲ -->
                     <div>
                         <h4 class="font-bold mb-4 text-lg">دروس پایه ۱۲</h4>
-                        <a href="http://www.chap.sch.ir/sites/default/files/lbooks/1403-1404/146/C211288.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFtRG12RFBnQUlMUS1sUm5ZT09PX1QxOWFrUlVxT1F3SCIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiJ3ZWJfMTJfUGhwTXlzcWwucGRmIn0=" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             توسعه دهنده صفحات وب با PHP و MySQL
                         </a>
-                        <a href="http://chap.sch.ir/sites/default/files/lbooks/1401-1402/694/C312260.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjE0cUpjQzRzUDRQWWxSa210VXFHYTJfcHlSaHpMU3hmUSIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiJ3ZWJfMTJfd29yZHByZXNzLnBkZiJ9" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             توسعه دهنده سیستم های مدیریت محتوا با WordPress
                         </a>
@@ -2185,7 +2185,7 @@
                     <!-- استاندارد رشته -->
                     <div>
                         <h4 class="font-bold mb-4 text-lg">استاندارد رشته</h4>
-                        <a href="https://payait.com/Standards/104-555.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFtNTJTbmRjRHF4bE9kTzRFUzlxeGo0dDRMWnZvRjhhVCIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiJlQ29udGVudEVkdV9TZGFuZGFyZEFtb3plc2hpLnBkZiJ9" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             استاندارد رشته
                         </a>
@@ -2194,15 +2194,15 @@
                     <!-- دروس پایه ۱۰ -->
                     <div>
                         <h4 class="font-bold mb-4 text-lg">دروس پایه ۱۰</h4>
-                        <a href="http://chap.sch.ir/sites/default/files/lbooks/1403-1404/847/C310215.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFJdThXckNaLTVhRlhzVFJpWTd6dlo0LU1YRl81M2RidCIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiIxMC1lQ2l0aXplbi5wZGYifQ==" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             استفاده از مهارت شهروند الکترونیک
                         </a>
-                        <a href="http://chap.sch.ir/sites/default/files/lbooks/1403-1404/847/C310183.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFQQkdmZXRYc2gzbkZKZ1hldWYybkdBZHNzb054MWhuUSIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiIxMC1Db21Vc2VyLnBkZiJ9" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             کاربر رایانه
                         </a>
-                        <a href="http://chap.sch.ir/sites/default/files/lbooks/97-98/741/001-320-C310184%20%26%20C311184.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFpaXJrSzM3N1NYT2V5QkEtanhwNGpZV3dsOVk1UHdPVSIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiIxMC1PZmZpY2VBdXRvVXNlci5wZGYifQ==" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             کاربر اتوماسیون اداری
                         </a>
@@ -2211,7 +2211,7 @@
                     <!-- دروس پایه ۱۱ -->
                     <div>
                         <h4 class="font-bold mb-4 text-lg">دروس پایه ۱۱</h4>
-                        <a href="http://chap.sch.ir/sites/default/files/lbooks/1401-1402/693/C311253_0.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjEzdDRTZ01henktOWlEVFZwWXluREVDWUF6VVE5STBoVyIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiJlQ29udGVudEVkdV8xMV9QdWJsaWNFQ29udGVudE1ha2VyLnBkZiJ9" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             تولید کننده محتوای الکترونیکی عمومی
                         </a>
@@ -2220,13 +2220,13 @@
                     <!-- دروس پایه ۱۲ -->
                     <div>
                         <h4 class="font-bold mb-4 text-lg">دروس پایه ۱۲</h4>
-                        <a href="http://www.chap.sch.ir/sites/default/files/lbooks/1403-1404/1265/C312271.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFaQ0JxalV4V2lxTnFNd1I3MUtYSl9TZWZwMGloWEtTQyIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiJlQ29udGVudEVkdV8xMl9Vc2VyR3JhcGhpY0Vjb250ZW50LnBkZiJ9" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
                             کاربر گرافیکی محتوای آموزشی
                         </a>
-                        <a href="http://www.chap.sch.ir/sites/default/files/lbooks/1401-1402/694/C312267.pdf" target="_blank" rel="noopener noreferrer" class="course-link">
+                        <a href="https://zncd.ir/?direct_file=eyJpZCI6IjFmUTJJSU90Qm44T281bmpyb3JLMWNzcWowSG5xbV9wTSIsImFjY291bnRJZCI6IjA1MTI3MjA5MDc5MTM1ODgwNDk2IiwidHlwZSI6ImFwcGxpY2F0aW9uL3BkZiIsIm5hbWUiOiJlQ29udGVudEVkdV8xMl9lQ29udGVudE1ha2VyRm9yZUVkdWNhdGlvbi5wZGYifQ==" target="_blank" rel="noopener noreferrer" class="course-link">
                             <i class="fas fa-file-pdf ml-2"></i>
-                            محتواساز آموزش الکترونیکی (جلد اول)
+                            محتواساز آموزش الکترونیکی 
                         </a>
                     </div>
                 </div>
