--- a/schools.html
+++ b/schools.html
@@ -1854,7 +1854,21 @@
                             </div>
                         </div>
                     </div>
-
+<!-- سرگروه -->
+                    <div class="glass-card p-8">
+                        <div class="text-center mb-6">
+                            <div class="w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4"
+                                 style="background-color: var(--accent-green);">
+                                <i class="fas fa-user-shield text-white text-2xl"></i>
+                            </div>
+                            <h3 class="text-2xl font-bold" style="color: var(--primary-blue);">سرگروه</h3>
+                        </div>
+                        <div class="bg-white bg-opacity-50 p-4 rounded-lg text-center border-r-4"
+                             style="border-color: var(--primary-blue);">
+                            <p class="font-semibold">فاطمه معتمد</p>
+                            <p class="text-sm opacity-70">سرگروه فن‌آموز زرین</p>
+                        </div>
+                    </div>
                     <!-- هنرآموزان -->
                     <div class="glass-card p-8">
                         <div class="text-center mb-6">
