--- a/darsi.html
+++ b/darsi.html
@@ -1233,7 +1233,7 @@
                     </a>
                     <a href="https://drive.google.com/file/d/17XGKo6s3I6lxqtYK1aLDsteaWGEhCMjE/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
-                        هوش مصنوعی
+                    (هوش مصنوعی(کتاب جدید
                     </a>
                     <a href="https://drive.google.com/file/d/1SBnvaKYJa4O-60k2xYv6-AMe7q52eym4/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="book-link">
                         <i class="fas fa-book ml-2"></i>
